modules/gdscript/tests/scripts/parser/errors/invalid_identifier_number.gd
func test():
	# Error here.
	var 23test = "is not a valid identifier"
